--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
             "email": "me@osama.app"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "almasaeed2010/adminlte": "dev-master",
+        "almasaeed2010/adminlte": "dev-master as 4.0.0",
         "twbs/bootstrap": "5.3.3",
-        "components/jquery": "dev-master",
-        "components/font-awesome": "dev-master"
-    }
+        "components/jquery": "3.7.1",
+        "components/font-awesome": "6.5.2"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
