--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         }
     ],
     "require": {
-        "almasaeed2010/adminlte": "dev-master as 4.0.0",
         "twbs/bootstrap": "5.3.3",
         "components/jquery": "3.7.1",
-        "components/font-awesome": "6.5.2"
+        "components/font-awesome": "6.5.2",
+        "hawkiq/adminltev4": "^4.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
